--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ li {
     display: flex;
     align-items: center;
     justify-content: left;
+    flex-wrap: wrap;
+    word-wrap: break-word;
     width: 100%;
     gap: 2rem;
     font-size: 1.5rem;
@@ -89,7 +91,7 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     background-color: var(--main);
     border-radius: 10px;
     width: 100%;
@@ -179,6 +181,9 @@ input[type="checkbox"] {
     #add {
         font-size: 1.1rem;
     }
+    .actions {
+        gap: 5px;
+    }
     .container {
         width: 80%;
     }
@@ -190,6 +195,30 @@ input[type="checkbox"] {
     }
     .container {
         width: 90%;
+    }
+    
+    li span {
+        font-size: .75rem;
+    }
+    #delete,
+    .btn,
+    #edit,
+    #add {
+        font-size: 0.75rem;
+    }
+
+    #input {
+        font-size: .75rem;
+    }
+    
+}
+@media (max-width: 400PX) {
+    h1 {
+        font-size: 2.75rem;
+    }
+    .container {
+        width: 100%;
+        height: 100vh;
     }
     
 }
